--- a/sections/生物统计学概论.tex
+++ b/sections/生物统计学概论.tex
@@ -390,7 +390,7 @@ e.g. three factors model
     \begin{align}
         \mathbb{E}\left( \mathrm{MS}_\alpha   \right)=&\sigma ^2+cn\sigma ^2_{\alpha \beta }+bn\sigma ^2_{\alpha \gamma}+n\sigma ^2_{\alpha \beta \gamma }+bcn\dfrac{\sum_{i}\alpha _i^2}{a-1} \\
         \mathbb{E}\left( \mathrm{MS}_{\alpha \beta }+\mathrm{MS}_{\alpha \gamma }-\mathrm{MS}_{\alpha \beta \gamma }    \right)=& \sigma ^2+cn\sigma ^2_{\alpha \beta }+bn\sigma ^2_{\alpha \gamma}+n\sigma ^2_{\alpha \beta \gamma }\\
-        F^*_{\alpha _i}=&\dfrac{\mathrm{MS}_\alpha+\mathrm{MS}_{\alpha \beta \gamma }}{\mathrm{MS}_{\alpha \beta }+\mathrm{MS}_{\alpha \gamma }}\sim F_{(a-1)+(a-1)(b-1)(c-1),(a-1)(b-1)+(a-1)(c-1)} 
+        F^*_{\alpha _i}=&\dfrac{\mathrm{MS}_\alpha+\mathrm{MS}_{\alpha \beta \gamma }}{\mathrm{MS}_{\alpha \beta }+\mathrm{MS}_{\alpha \gamma }}\sim F_{(a-1)+(a-1)(b-1)(c-1),\,(a-1)(b-1)+(a-1)(c-1)} 
     \end{align}
 
     
@@ -403,7 +403,7 @@ e.g. three factors model
 
 
 
-\subsubsection{Diagnosis}
+\subsubsection{Diagnosis}\label{SubSubSectionDiagnosticsToFactorModel}
 
 Some useful diagnosis to check assumptions:
 \begin{itemize}[topsep=2pt,itemsep=0pt]
